# bg_ocr_click

./: .gitignore  AGENTS.md  CODE_MAP.md  QT_REFACTOR_REMAINING.md  README.md  REFACTOR_STATUS.md  bg_ocr_click.py  bg_ocr_config.py  bg_ocr_matching.py  bg_ocr_mouse.py  bg_ocr_qt.py  install_codex_context_menu.bat  pyproject.toml
bg_ocr/: __init__.py  action_runtime.py  capture.py  compat.py  config.py  monitor.py  mouse.py  ocr.py  system.py
bg_ocr/qt/: __init__.py  actions.py  app.py  auto_bind.py  bridge.py  group_coordinator.py  group_editor.py  group_factory.py  group_manager.py  group_ops.py  hotkeys.py  main_window.py  monitor_lifecycle.py  pickers.py  runtime_adapter.py  runtime_checks.py  settings.py  shutdown.py  state.py  tabs.py  templates.py  theme.py  value_helpers.py  window_binding.py  window_lifecycle.py  window_setup.py
docs/superpowers/specs/: 2026-06-30-embedded-action-sequence-design.md
tests/: test_smoke.py
themes/: __init__.py  default.qss  modern.qss
