[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bg-ocr-click"
version = "0.1.0"
description = "Background OCR click automation tool"
requires-python = ">=3.9"
dependencies = [
  "Pillow",
  "pytesseract",
  "pyautogui",
  "screeninfo",
  "opencv-python",
  "numpy",
  "PyQt6",
  "keyboard",
  "psutil",
  "pywin32; platform_system == 'Windows'",
]

[project.scripts]
bg-ocr-click = "bg_ocr_qt:main"

[tool.setuptools]
packages = ["bg_ocr", "bg_ocr.qt", "themes"]
py-modules = ["bg_ocr_qt"]

[tool.setuptools.package-data]
themes = ["*.qss"]
